k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellokube
spec:
  selector:
    matchLabels:
      app: hellokube
  replicas: 1
  template:
    metadata:
      labels:
        app: hellokube
    spec:
      containers:
      - name: hellokube
        image: gcr.io/hellokube-251919/hellokube:latest
        resources:
          limits:
            cpu: 200m
          requests:
            cpu: 150m
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellokube
  name: hellokube-np
spec:
  type: NodePort
  selector:
    app: hellokube
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
