ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellokube-ingress
spec:
  backend:
    serviceName: hellokube
    servicePort: 3000
